--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Background orbs container -->
+  <!-- Background Orbs Container -->
   <div class="orbs">
     <div class="orb orb1"></div>
     <div class="orb orb2"></div>
     <div class="orb orb3"></div>
     <div class="orb orb4"></div>
   </div>
-
-  <!-- Main content container (centered using Flexbox) -->
+  
+  <!-- Main Content Container (centered using Flexbox) -->
   <div class="content">
-    <!-- Shayri Container -->
+    <!-- Shayri Container (will hold the AI generated shayri) -->
     <div class="shayri-container" id="shayri">
-      <!-- AI generated shayri will appear here -->
+      <!-- Generated shayri will appear here -->
     </div>
     
     <!-- Buttons: Shuffle & Share -->
@@ -35,8 +35,7 @@
     </div>
   </div>
   
-  <!-- Background Jazz Music -->
-  <!-- Replace 'your_jazz_music.mp3' with the path/URL of your audio file -->
+  <!-- Background Jazz Music (Replace with your own music file) -->
   <audio id="bg-music" autoplay loop>
     <source src="your_jazz_music.mp3" type="audio/mp3">
     Your browser does not support the audio element.
