--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
   <!-- Main Content Container (centered using Flexbox) -->
   <div class="content">
-    <!-- Shayri Container (will hold the AI generated shayri) -->
+    <!-- Shayri Container (will hold the fully AI generated shayri) -->
     <div class="shayri-container" id="shayri">
       <!-- Generated shayri will appear here -->
     </div>
